new subscription page

--- a/p0/browse.html
+++ b/p0/browse.html
@@ -273,7 +273,7 @@ aa<!DOCTYPE html>
                 </div>
                 <div class="col-lg-12">
                   <div class="main-button">
-                    <a href="profile.html">Go To Profile</a>
+                    <a href="subscription.html">Subscribe to our service</a>
                   </div>
                 </div>
               </div>
@@ -296,36 +296,36 @@ aa<!DOCTYPE html>
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
-                          <a href="#">Live</a>
+                          <a href="https://kick.com/ninja">Live</a>
                         </div>
                         <ul>
-                          <li><a href="#"><i class="fa fa-eye"></i> 1.2K</a></li>
-                          <li><a href="#"><i class="fa fa-gamepad"></i> CS-GO</a></li>
+                          <li><a href="#"><i class="fa fa-eye"></i> 37k</a></li>
+                          <li><a href="#"><i class="fa fa-gamepad"></i> Fortnite</a></li>
                         </ul>
                       </div>
                     </div>
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/Ninja Stream.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
-                    <span><i class="fa fa-check"></i> KenganC</span>
-                    <h4>Just Talking With Fans</h4>
+                    <span><i class="fa fa-check"></i> Ninja</span>
+                    <h4>24/7 Fortnite!!!</h4>
                   </div> 
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-02.jpg" alt="">
+                    <img src="assets/images/Pokimane2.webp" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
-                          <a href="#">Live</a>
+                          <a href="https://www.twitch.tv/pokimane">Live</a>
                         </div>
                         <ul>
-                          <li><a href="#"><i class="fa fa-eye"></i> 1.2K</a></li>
-                          <li><a href="#"><i class="fa fa-gamepad"></i> CS-GO</a></li>
+                          <li><a href="#"><i class="fa fa-eye"></i> 20K</a></li>
+                          <li><a href="#"><i class="fa fa-gamepad"></i> Valorant</a></li>
                         </ul>
                       </div>
                     </div>
@@ -334,23 +334,23 @@ aa<!DOCTYPE html>
                     <div class="avatar">
                       <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
-                    <span><i class="fa fa-check"></i> LunaMa</span>
-                    <h4>CS-GO 36 Hours Live Stream</h4>
+                    <span><i class="fa fa-check"></i> Pokimane</span>
+                    <h4>Just-Chatting</h4>
                   </div> 
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-03.jpg" alt="">
+                    <img src="assets/images/Ironmouse_Portrait_04_2021.webp" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
-                          <a href="#">Live</a>
+                          <a href="https://www.twitch.tv/ironmouse">Live</a>
                         </div>
                         <ul>
-                          <li><a href="#"><i class="fa fa-eye"></i> 1.2K</a></li>
-                          <li><a href="#"><i class="fa fa-gamepad"></i> CS-GO</a></li>
+                          <li><a href="#"><i class="fa fa-eye"></i> 10k</a></li>
+                          <li><a href="#"><i class="fa fa-gamepad"></i> Supermarket Simulator</a></li>
                         </ul>
                       </div>
                     </div>
@@ -359,23 +359,23 @@ aa<!DOCTYPE html>
                     <div class="avatar">
                       <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
-                    <span><i class="fa fa-check"></i> Areluwa</span>
-                    <h4>Maybe Nathej Allnight Chillin'</h4>
+                    <span><i class="fa fa-check"></i> ironmouse</span>
+                    <h4>NEW BODEGA! OLD ONE BURNED DOWN!</h4>
                   </div> 
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-04.jpg" alt="">
+                    <img src="assets/images/shroud.webp" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
-                          <a href="#">Live</a>
+                          <a href="https://www.twitch.tv/shroud">Live</a>
                         </div>
                         <ul>
-                          <li><a href="#"><i class="fa fa-eye"></i> 1.2K</a></li>
-                          <li><a href="#"><i class="fa fa-gamepad"></i> CS-GO</a></li>
+                          <li><a href="#"><i class="fa fa-eye"></i> 11k</a></li>
+                          <li><a href="#"><i class="fa fa-gamepad"></i>Rainbow Six Siege</a></li>
                         </ul>
                       </div>
                     </div>
@@ -384,8 +384,8 @@ aa<!DOCTYPE html>
                     <div class="avatar">
                       <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
-                    <span><i class="fa fa-check"></i> GangTm</span>
-                    <h4>Live Streaming Till Morning</h4>
+                    <span><i class="fa fa-check"></i> Shroud</span>
+                    <h4>Training Arc</h4>
                   </div> 
                 </div>
               </div>
