--- a/p0/ceo.html
+++ b/p0/ceo.html
@@ -115,8 +115,9 @@
                       <span>Online</span>
                       <h4>Tran Le</h4>
                       <p>Tran Le is a dynamic and visionary leader with a passion for revolutionizing the digital entertainment landscape. With a background in technology and business management, Tran brings a unique blend of strategic acumen and creative flair to his role as CEO of Yggdrasil. Prior to spearheading Yggdrasil, Tran held key leadership positions in the tech industry, where he gained invaluable experience in product development, marketing, and corporate strategy.</p>
-                      <div class="main-border-button">
-        
+                        <div class="main-border-button">
+                          <a href="contact.html">Contact</a>
+                        </div>
                       </div>
                     </div>
                   </div>
