--- a/p0/jason.html
+++ b/p0/jason.html
@@ -116,19 +116,9 @@
                       <h4>Jason Vang</h4>
                       <p>A dedicated and knowledgeable technical support specialist with a passion for troubleshooting and providing excellent customer service. Experienced in assisting users with streaming platforms and resolving technical issues promptly and efficiently. Proficient in communication and problem-solving, with a commitment to ensuring a seamless streaming experience for all users.</p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                        <a href="contact.html">Contact</a>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 align-self-center">
-                    <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>4</span></li>
-                    </ul>
-                  </div>
-                </div>
+                   
 
           <!-- ***** Gaming Library End ***** -->
         </div>
