--- a/p0/kina.html
+++ b/p0/kina.html
@@ -116,19 +116,9 @@
                       <h4>Kina Chourn</h4>
                       <p>Kina Chourn is a dynamic professional with a passion for digital innovation and creative direction. With a solid background in web development and a keen eye for design, Kina has led numerous successful projects in the realm of website direction. Her expertise lies in conceptualizing and executing website strategies that elevate brand presence and drive user engagement. </p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                        <a href="contact.html">Contact</a>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 align-self-center">
-                    <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>4</span></li>
-                    </ul>
-                  </div>
-                </div>
+             
 
           <!-- ***** Gaming Library End ***** -->
         </div>
