--- a/p0/mao.html
+++ b/p0/mao.html
@@ -116,19 +116,9 @@
                       <h4>Mao Vang</h4>
                       <p>A creative and strategic social media manager with a passion for digital marketing and storytelling. Experienced in developing engaging content strategies and managing social media channels to drive brand awareness and user engagement. Skilled in analytics and community management, with a focus on fostering meaningful connections with audiences. Committed to leveraging social platforms to enhance the presence and reputation of Yggdrasil Streaming Company.</p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                        <a href="contact.html">Contact</a>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 align-self-center">
-                    <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>4</span></li>
-                    </ul>
-                  </div>
-                </div>
+                 
 
           <!-- ***** Gaming Library End ***** -->
         </div>
