--- a/p0/savannah.html
+++ b/p0/savannah.html
@@ -116,20 +116,9 @@
                       <h4>Savannah Thao</h4>
                       <p>A talented and versatile graphic designer with a passion for visual storytelling and brand identity development. Proficient in creating eye-catching graphics and multimedia content to enhance the user experience and drive engagement. Experienced in collaborating with cross-functional teams to deliver creative solutions aligned with brand objectives. Dedicated to bringing innovative design concepts to life for Yggdrasil Streaming Company.</p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                        <a href="contact.html">Contact</a>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 align-self-center">
-                    <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>4</span></li>
-                    </ul>
-                  </div>
-                </div>
-
+                  
           <!-- ***** Gaming Library End ***** -->
         </div>
       </div>
