--- a/p0/seng.html
+++ b/p0/seng.html
@@ -116,19 +116,9 @@
                       <h4>Valorie Phaphapong</h4>
                       <p>A dynamic and community-focused professional with a passion for fostering positive relationships and driving engagement within online communities. Experienced in building and managing vibrant communities around streaming platforms, Seng Her is adept at creating inclusive spaces where users feel valued and connected. Skilled in communication, moderation, and content creation, Seng is committed to enhancing the Yggdrasil Streaming Company's community experience.</p>
                       <div class="main-border-button">
-                        <a href="https://www.twitch.tv/p/en/stream/">Contact</a>
+                        <a href="contact.html">Contact</a>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 align-self-center">
-                    <ul>
-                      <li>Games Downloaded <span>153</span></li>
-                      <li>Friends Online <span>16</span></li>
-                      <li>Live Streams <span>None</span></li>
-                      <li>Clips <span>4</span></li>
-                    </ul>
-                  </div>
-                </div>
+              
 
           <!-- ***** Gaming Library End ***** -->
         </div>
