--- a/p0/details.html
+++ b/p0/details.html
@@ -102,31 +102,11 @@
       <div class="col-lg-12">
         <div class="page-content">
 
-          <!-- ***** Featured Start ***** -->
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="feature-banner header-text">
-                <div class="row">
-                  <div class="col-lg-4">
-                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
-                  </div>
-                  <div class="col-lg-8">
-                    <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ***** Featured End ***** -->
-
           <!-- ***** Details Start ***** -->
           <div class="game-details">
             <div class="row">
               <div class="col-lg-12">
-                <h2>Yggdrasil</h2>
+                <h2 style="border: ;">Yggdrasil</h2>
               </div>
               <div class="col-lg-12">
                 <div class="content">
