--- a/p0/details.html
+++ b/p0/details.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Yggrasil - A Convergence of Worlds</title>
+    <title>Yggrasil - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -102,11 +102,31 @@
       <div class="col-lg-12">
         <div class="page-content">
 
+          <!-- ***** Featured Start ***** -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="feature-banner header-text">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
+                  </div>
+                  <div class="col-lg-8">
+                    <div class="thumb">
+                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- ***** Featured End ***** -->
+
           <!-- ***** Details Start ***** -->
           <div class="game-details">
             <div class="row">
               <div class="col-lg-12">
-                <h2 style="border: ;">Yggdrasil</h2>
+                <h2>Yggdrasil</h2>
               </div>
               <div class="col-lg-12">
                 <div class="content">
@@ -153,6 +173,10 @@
                       <div class="main-border-button">
                         <a href="charity.html">Contribute to our cause!</a>
                       </div>
+                      <div class="col-lg-12">
+                        <div class="main-border-button">
+                          <a href="jobs.html">Join our team!</a>
+                        </div>
                     </div>
                   </div>
                 </div>
