--- a/p0/details.html
+++ b/p0/details.html
@@ -113,7 +113,6 @@
                   <div class="col-lg-8">
                     <div class="thumb">
                       <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
-                      <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
                 </div>
@@ -175,7 +174,7 @@
                       </div>
                       <div class="col-lg-12">
                         <div class="main-border-button">
-                          <a href="jobs.html">Join our team!</a>
+                          <a href="">Join our team!</a>
                         </div>
                     </div>
                   </div>
