--- a/p0/jobs.html
+++ b/p0/jobs.html
@@ -102,11 +102,13 @@
       <div class="col-lg-12">
         <div class="page-content">
  <!-- Featured Games Start -->
+ <div class="col-lg">
+<img src="assets/images/Hiring.jpg" alt="">
+ </div>
  <p style="color: white;">
-    Ready to be part of something extraordinary? Yggdrasil is more than just a streaming company - it's a creative hub where innovation thrives and imaginations soar! We are excited to have you in our team, so if you feel like you have the spirit and potential to be one of our brave "warriors"
+    At Yggdrasil, we're not just a streaming company; we're a realm of boundless creativity and endless possibilities. Here, innovation isn't just encouraged - it's celebrated. We're a team of visionary warriors, fearlessly pushing the boundaries of what's possible in the world of entertainment.
+    Are you ready to join our ranks, to wield your creativity like a mighty sword and forge unforgettable experiences for our audience? Whether you're a seasoned veteran or a rising star, we want YOU to be part of our epic saga! Join us in our quest to redefine the streaming landscape. Embark on an odyssey where innovation knows no bounds and imagination reigns supreme. Together, let's write the next chapter of streaming history!
 <h5>Apply Now!</h5>
-    
-
 <form id="recruitmentForm" action="#" method="post">
     <div class="form-group">
       <label for="inputName">Full Name</label>
