--- a/p0/browse.html
+++ b/p0/browse.html
@@ -112,12 +112,12 @@ aa<!DOCTYPE html>
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/GTA5.bmp" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Grand Theft Auto V<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -125,12 +125,12 @@ aa<!DOCTYPE html>
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/Fortnite.bmp" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Fortnite<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -138,12 +138,12 @@ aa<!DOCTYPE html>
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/Valorant.bmp" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>Valorant<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -151,12 +151,12 @@ aa<!DOCTYPE html>
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/Overwatch.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Overwatch 2<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -164,12 +164,12 @@ aa<!DOCTYPE html>
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/Dead By Daylight.jpg" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Dead By Daylight<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -177,12 +177,12 @@ aa<!DOCTYPE html>
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/League Of Legends.jpg" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>League Of Legends<br><span>249K Downloads</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -198,7 +198,7 @@ aa<!DOCTYPE html>
                 </div>
                 <ul>
                   <li>
-                    <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/Smite.png" alt="" class="templatemo-item">
                     <h4>Smite</h4>
                     <h6>MOBA</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -208,7 +208,7 @@ aa<!DOCTYPE html>
                     </div>
                   </li>
                   <li>
-                    <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/GenshinImpact.png" alt="" class="templatemo-item">
                     <h4>Genshin Impact</h4>
                     <h6>Action Role-playing</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -218,7 +218,7 @@ aa<!DOCTYPE html>
                     </div>
                   </li>
                   <li>
-                    <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/VRChat.webp" alt="" class="templatemo-item">
                     <h4>VR Chat</h4>
                     <h6>VR Game</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
