--- a/p0/index.html
+++ b/p0/index.html
@@ -215,7 +215,7 @@
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="browse.html">Popular Streams</a>
                     </div>
                   </div>
                 </div>
@@ -277,7 +277,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. All rights reserved. 
+          <p>Copyright © 2036 <a href="sitemap.html">Yggdrasil's Gaming</a> Company. <a href="sitemap.html">© Sitemap</a>
           
         </div>
       </div>
