--- a/p0/charity.html
+++ b/p0/charity.html
@@ -113,7 +113,7 @@
             <!-- ***** Search End ***** -->
             <div class="search-input">
               <form id="search" action="#">
-                <input type="text" placeholder="Navigate here" id='searchText' name="searchKeyword"
+                <input type="text" placeholder="Search Here" id='searchText' name="searchKeyword"
                   onkeypress="handle" />
                 <i class="fa fa-search"></i>
               </form>
