--- a/p0/seng.html
+++ b/p0/seng.html
@@ -113,7 +113,7 @@
                   <div class="col-lg-4 align-self-center">
                     <div class="main-info header-text">
                       <span>Online</span>
-                      <h4>Valorie Phaphapong</h4>
+                      <h4>Valorie Phaphilom</h4>
                       <p>A dynamic and community-focused professional with a passion for fostering positive relationships and driving engagement within online communities. Experienced in building and managing vibrant communities around streaming platforms, Seng Her is adept at creating inclusive spaces where users feel valued and connected. Skilled in communication, moderation, and content creation, Seng is committed to enhancing the Yggdrasil Streaming Company's community experience.</p>
                       <div class="main-border-button">
                         <a href="contact.html">Contact</a>
